# Windows_Audio_Driver

./: .gitignore  Readme.MD
Document/: Qt5MultiMedia音频数据流.drawio  WASAPI音频数据流.drawio  [WASAPI]从Qt MultipleMedia来看WASAPI.md
Proj/HellowWorld_WindowsDriver/: HellowWorld_WindowsDriver.sln
Proj/HellowWorld_WindowsDriver/HellowWorld_WindowsDriver/: Driver.c  HellowWorld_WindowsDriver.inf  HellowWorld_WindowsDriver.vcxproj
Proj/HellowWorld_WindowsDriver/x64/Debug/: HellowWorld_WindowsDriver.cer  HellowWorld_WindowsDriver.sys
Proj/HellowWorld_WindowsDriver/x64/Debug/HellowWorld_WindowsDriver/: HellowWorld_WindowsDriver.inf  HellowWorld_WindowsDriver.sys  hellowworld_windowsdriver.cat
Proj/WASAPI_Testbench/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Proj/WASAPI_Testbench/includes/: AudioAPI.h
Proj/WASAPI_Testbench/src/: AudioAPI.cpp
Proj/WindowsAudioDriver/: WindowsAudioDriver.sln
Proj/WindowsAudioDriver/WindowsAudioDriver/: Form1.Designer.cs  Form1.cs  MediaAudio.cs  Program.cs
Proj/audio-record-qt/: .gitignore  CMakeLists.txt  mainwindow.cpp  mainwindow.h
Proj/audio-record-qt-6/: CMakeLists.txt  LICENSE  README.en.md  README.md  mainwindow.cpp  mainwindow.ui
Proj/audio-record-qt-6/AudioRecorder/: AudioRecorder.cpp  AudioRecorder.h  CMakeLists.txt
Proj/audio-record-qt/AudioRecorder/: AudioRecorder.cpp  AudioRecorder.h  AudioRecorder_Qt.cpp  CMakeLists.txt
